Update navigation links and add new sponsors page

--- a/outreach.html
+++ b/outreach.html
@@ -27,7 +27,7 @@
         </div>
         <ul class="nav-menu">
           <li><a href="index.html" class="nav-links">Home</a></li>  
-          <li><a href="#aboutID" class="nav-links">About</a></li>  
+          <li><a href="/index.html#aboutID" class="nav-links">About</a></li>  
           <li><a class='nav-links' href='/seasons.html'>Seasons</a></li>  
           <li><a class='nav-links' href='/sponsors.html'>Sponsors</a></li>  
           <li><a class='nav-links' href='/outreach.html'>Outreach</a></li>  
@@ -53,82 +53,94 @@
             <div class="list-content">
                 <h1>Heart Walk</h1>
                 <img src="/images/Corazón.jpg" alt="pic" id="OutreachPic">
-                <p>In Noveber of 2024, </p>
+                <p>In November of 2024, We had a booth at the Heart Walk.
+                    promoting heart health, and giving a robot demo.  </p>
             </div>
         </div>
         <div class="outreachList-item right">
             <div class="list-content">
                 <h1>FTC Event</h1>
                 <img src="/images/FTCYEAH.jpg" alt="pic" id="OutreachPic">
-                <p>During October and December of 2024, </p>
+                <p>During October and December of 2024, We volunteered at a Conroe ISD FTC event.</p>
             </div>
         </div>
         <div class="outreachList-item left">
             <div class="list-content">
                 <h1>Homecoming Parade</h1>
                 <img src="/images/Homecoming.png" alt="pic" id="OutreachPic">
-                <p>In September of 2024, </p>
+                <p>In September of 2024, We participated in the TWCP homecoming parade.
+                    This was an opportunity to promote our organization to a large number of people. </p>
             </div>
         </div>
         <div class="outreachList-item right">
             <div class="list-content">
                 <h1>Camp Cavalier</h1>
                 <img src="/images/CC2024.png" alt="pic" id="OutreachPic">
-                <p>In August of 2024, </p>
+                <p>In August of 2024, We showed our robot, Sentinal, to incoming ninth ninth graders.
+                    Telling them about our FIRST experiences and how they can get involved. </p>
             </div>
         </div>
         <div class="outreachList-item left">
             <div class="list-content">
                 <h1>SNHS Day Camp</h1>
                 <img src="/images/SNHSCamp.png" alt="pic" id="OutreachPic">
-                <p>In April of 2024, </p>
+                <p>In April of 2024,We participated in a camp for local schoolchildren, where 
+            we educated them about FIRST and STEM as a whole.
+              </p>
             </div>
         </div>
         <div class="outreachList-item right">
             <div class="list-content">
                 <h1>Autism Awareness Celebration</h1>
                 <img src="/images/Autism.jpeg" alt="pic" id="OutreachPic">
-                <p>In April of 2024, </p>
+                <p>In April of 2024, At the Autism Awareness Celebration, we helped 
+                    at a Lego Robotics table, while sharing our experiences with FIRST to
+                the Autism Community. </p>
             </div>
         </div>
         <div class="outreachList-item left">
             <div class="list-content">
                 <h1>Cars and Coffee</h1>
                 <img src="/images/Happy.JPG" alt="pic" id="OutreachPic">
-                <p>In October of 2023, </p>
+                <p>In October of 2023, We displayed our robot at Woodforest Bank Stadium
+                    during the cars and coffee event. Displaying our organization to kids 
+                and parents alike. </p>
             </div>
         </div>
         <div class="outreachList-item right">
             <div class="list-content">
                 <h1>Girl Scout Tour</h1>
                 <img src="/images/GirlScoutsOminous.png" alt="pic" id="OutreachPic">
-                <p>In October of 2023, </p>
+                <p>In October of 2023, We gave a Girl Scouts troop a tour of the lab,
+                    where we showed them our robot and explained the process of building it.    
+                </p>
             </div>
         </div>
         <div class="outreachList-item left">
             <div class="list-content">
                 <h1>SHSU Engineering Technology Visit</h1>
                 <img src="/images/SHSUVisit.png" alt="pic" id="OutreachPic">
-                <p> In May of 2023, </p>
+                <p> In May of 2023, we invited SHSU students to to come to the robotics lab and demo
+                    our robot Kracken. They informed us about their various STEM programs. </p>
             </div>
         </div>
         <div class="outreachList-item right">
             <div class="list-content">
                 <h1>Camp Cavalier</h1>
                 <img src="/images/CampCav2023.JPG" alt="pic" id="OutreachPic">
-                <p>In July of 2023, </p>
+                <p>In July of 2023, We demo or previous competition robot to incoming ninth 
+                    graders. This is our biggest recruitment event, and our oppurtounity to inspire 
+                    the next generation of STEM entrepaneurs.  </p>
             </div>
         </div>
         <div class="outreachList-item left">
             <div class="list-content">
                 <h1>OpenAlliance Build Blog</h1>
                 <img src="/images/OpenAll.svg" alt="pic" id="OutreachPic">
-                <p>We created a public build blog for several reasons - primarily, we believe 
-                    that having documentation is beneficial long-term for both people in and 
-                    out of the team. Plus, for families, friends, teachers, and sponsors, being 
-                    able to follow the team makes it feel much more personal. Additionally, we are 
-                    transparent about our progress, sharing both the good and the bad, so others 
-                    can learn from what we encounter and struggle with throughout the season.</p>
+                <p> Our blog  is a useful tool for long-term documantation which benifits both 
+                    people on, and off the team. Our blog also allows for friends, family, teachers, 
+                    and sponsors to follow every step of the FIRST journey.<p>
+                    
                     <p><a href="https://www.chiefdelphi.com/t/cavbots-7492-2024-open-alliance-build-blog/447602">2024 Build Blog</a></p>
                     <p><a href="https://www.chiefdelphi.com/t/7492-cavbots-2023-build-blog/419193">2023 Build Blog</a></p>
                     <p><a href="https://www.chiefdelphi.com/t/7492-cavbots-2022-build-blog/398060">2022 Build Blog</a></p>
@@ -139,9 +151,9 @@
                 <h1>Mentoring FLL Teams</h1>
                 <img src="/images/FLL.svg" alt="pic" id="OutreachPic">
                 <p>From 2019 to 2021, we mentored at three different elementary and intermediate public 
-                    schools in Houston, Texas. Every one of us has had fantastic experiences 
-                    with FIRST, and we need to share that with the children in our community. 
-                    We understand that by mentoring FLL teams we are encouraging future STEM leaders. </p>
+                    schools in Houston. Every one of us has had fantastic experiences 
+                    with FIRST, and we love sharing that with the children in our community.
+                    By mentoring FIRST Lego League teams, we encourage STEM leaders. </p> 
             </div>
         </div>
         <div class="outreachList-item left">
@@ -172,8 +184,9 @@
             <div class="list-content">
                 <h1>YMCA Gift Wrapping</h1>
                 <img alt="pic" src="/images/giftwrapping.png" id="OutreachPic">
-                <p>In December of 2023, we volunteered with the YMCA at a local church to wrap presents for those in need. Our goal is to make a positive impact 
-                    in our community and the world around us, and helping out at the YMCA was a way of furthering that goal.</p>
+                <p>In December of 2023, we volunteered with the YMCA at a local church to wrap presents for those in need. Our 
+                    goal is to make a positive impact in our community and the world around us, and helping out at the YMCA was 
+                    a way of furthering that goal.</p>
             </div>
         </div>
         <div class="outreachList-item right">
@@ -181,7 +194,7 @@
                 <h1>Cars and Coffee</h1>
                 <img alt="pic" src="/images/coffecars_setup_good.jpg" id="OutreachPic">
                 <p>In April of 2023, we put on a demonstration of our robot at Woodforest Bank Stadium during the Cars and Coffee car show. 
-                    We were able to introduce many of our peers to STEM and robotics, which drummed up interest in our team as well as STEM as a whole.</p>
+                    We were able to introduce many of our peers to STEM and robotics, which caused interest in our team as well as STEM as a whole.</p>
             </div>
         </div>
         <div class="outreachList-item left">
