--- a/resources.html
+++ b/resources.html
@@ -26,7 +26,7 @@
             </div>
             <ul class="nav-menu">
               <li><a href="index.html" class="nav-links">Home</a></li>  
-              <li><a href="#aboutID" class="nav-links">About</a></li>  
+              <li><a href="/index.html#aboutID" class="nav-links">About</a></li>  
               <li><a class='nav-links' href='/seasons.html'>Seasons</a></li>  
               <li><a class='nav-links' href='/sponsors.html'>Sponsors</a></li>  
               <li><a class='nav-links' href='/outreach.html'>Outreach</a></li>  
